# sui-desktop-wallet

./: LICENSE  package.json  pnpm-lock.yaml  sui.log.2022-08-05  svelte.config.js  vite.config.js
src/: hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src/routes/: index.svelte
