[package]
name = "sui-desktop-wallet"
version = "0.1.0"
description = "Desktop wallet app for the Sui blockchain"
authors = ["Hasan Mukhlis"]
license = "MIT OR Apache-2.0"
repository = "github.com/hazelnutcloud/sui-desktop-wallet"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
jsonrpsee = { version = "0.15.1", features = ["full"] }
ed25519-dalek = "1.0.1"
anyhow = "1.0.59"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
